--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: CI
 # Workflow file for windows
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 jobs:
   job:
     name: ${{ matrix.os }}-build
@@ -12,21 +12,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ windows-latest ]
-        include:          
+        os: [windows-latest]
+        include:
           - build: windows
             os: windows-latest
             rust: nightly-x86_64-msvc
             target: x86_64-pc-windows-msvc
             archive-name: sgf-render-windows.7z
     env:
-      VCPKG_ROOT: '${{ github.workspace }}/vcpkg'
+      VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: recursiv
-          
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -39,9 +39,6 @@ jobs:
         uses: actions/cache@v2
         id: vcpkg-cache
         with:
-          # The first path is where vcpkg generates artifacts while consuming the vcpkg.json manifest file.
-          # The second path is the location of vcpkg (it contains the vcpkg executable and data files).
-          # The other paths starting with '!' are exclusions: they contain termporary files generated during the build of the installed packages.
           path: |
             ${{ env.VCPKG_ROOT }}
             ${{ github.workspace }}/build/vcpkg_installed
@@ -49,30 +46,22 @@ jobs:
             !${{ env.VCPKG_ROOT }}/buildtrees
             !${{ env.VCPKG_ROOT }}/packages
             !${{ env.VCPKG_ROOT }}/downloads
-          # The key is composed in a way that it gets properly invalidated: this must happen whenever vcpkg's Git commit id changes, or the list of packages changes. In this case a cache miss must happen and a new entry with a new key with be pushed to GitHub the cache service.
-          # The key includes: hash of the vcpkg.json file, the hash of the vcpkg Git commit id, and the used vcpkg's triplet. The vcpkg's commit id would suffice, but computing an hash out it does not harm.
-          # Note: given a key, the cache content is immutable. If a cache entry has been created improperly, in order the recreate the right content the key must be changed as well, and it must be brand new (i.e. not existing already).
           key: |
             ${{ hashFiles( 'Cargo.lock' ) }}-${{ runner.os }}-cache-key-v1
       - name: Get vcpkg(windows)
         if: ${{ runner.os == 'Windows' && steps.vcpkg-cache.outputs.cache-hit != 'true' }}
+
+        env:
+          VCPKGDIR: "${{ github.workspace }}/vcpkg"
+          PKG_CONFIG_PATH: %VCPKGDIR%\installed\x64-windows\lib\pkgconfig
+          GTK_LIB_DIR: %VCPKGDIR%\installed\x64-windows\lib
+
         run: |
           cd ${{ github.workspace }}
           mkdir build -force
           git clone https://github.com/Microsoft/vcpkg.git
           cd vcpkg
           .\bootstrap-vcpkg.bat
-          cmd
-          SET VCPKGDIR '${{ github.workspace }}/vcpkg'
-  
-          SET PKG_CONFIG_PATH %VCPKGDIR%\installed\x64-windows\lib\pkgconfig
-          
-          SET GTK_LIB_DIR %VCPKGDIR%\installed\x64-windows\lib
-          
-          SET PATH=%VCPKGDIR%\installed\x64-windows\bin;%PATH%
-          
-  
-    
-          
-  
-          
+          .\vcpkg install gtk --triplet x64-windows
+          cd ${{ github.workspace }}
+          cargo build --release
