--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,16 +27,10 @@ jobs:
       PATH: ${{ github.workspace }}\pkg-config\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
 
     steps:
-      - name: update git
-        run: |
-        
-          git update-git-for-windows   
-  
-  
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
+      # - name: Checkout
+      #   uses: actions/checkout@v2
+      #   with:
+      #     submodules: recursive
 
       # - name: Install Rust
       #   uses: actions-rs/toolchain@v1
