--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,9 +66,7 @@ jobs:
       - name: Build GTK App
         run: |
           # aria2 https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zip
-          
-          bitsadmin /transfer myDownLoadJob /download /priority normal "https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zi" "${{ github.workspace }}"
-         
+          wget https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zip
           # powershell (new-object Net.WebClient).DownloadFile('https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zip','${{ github.workspace }}')
           7z e  -opkg-config pkg-config-lite-0.28-1_bin-win32.zip
           pkg-config --version
