--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,50 +27,46 @@ jobs:
       PATH: ${{ github.workspace }}\pkg-config-lite-0.28-1\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
 
     steps:
-      # - name: Checkout
-      #   uses: actions/checkout@v2
-      #   with:
-      #     submodules: recursive
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
-      # - name: Install Rust
-      #   uses: actions-rs/toolchain@v1
-      #   with:
-      #     toolchain: ${{ matrix.rust }}
-      #     profile: minimal
-      #     override: true
-      #     target: ${{ matrix.target }}
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          profile: minimal
+          override: true
+          target: ${{ matrix.target }}
 
-      # - name: Restore vcpkg and its artifacts.
-      #   uses: actions/cache@v2
-      #   id: vcpkg-cache
-      #   with:
-      #     path: |
-      #       ${{ env.VCPKG_ROOT }}
-      #       ${{ github.workspace }}/build/vcpkg_installed
-      #       !${{ env.VCPKG_ROOT }}/.git
-      #       !${{ env.VCPKG_ROOT }}/buildtrees
-      #       !${{ env.VCPKG_ROOT }}/packages
-      #       !${{ env.VCPKG_ROOT }}/downloads
-      #     key: |
-      #       ${{ hashFiles( 'Cargo.lock' ) }}-${{ runner.os }}-cache-key-v1
-      # - name: Get vcpkg(windows)
-      #   if: ${{ runner.os == 'Windows' && steps.vcpkg-cache.outputs.cache-hit != 'true' }}
-      #   run: |
-      #     cd ${{ github.workspace }}
-      #     mkdir build -force
-      #     git clone https://github.com/Microsoft/vcpkg.git
-      #     cd vcpkg
-      #     .\bootstrap-vcpkg.bat
-      #     .\vcpkg install gtk --triplet x64-windows
+      - name: Restore vcpkg and its artifacts.
+        uses: actions/cache@v2
+        id: vcpkg-cache
+        with:
+          path: |
+            ${{ env.VCPKG_ROOT }}
+            ${{ github.workspace }}/build/vcpkg_installed
+            !${{ env.VCPKG_ROOT }}/.git
+            !${{ env.VCPKG_ROOT }}/buildtrees
+            !${{ env.VCPKG_ROOT }}/packages
+            !${{ env.VCPKG_ROOT }}/downloads
+          key: |
+            ${{ hashFiles( 'Cargo.lock' ) }}-${{ runner.os }}-cache-key-v1
+      - name: Get vcpkg(windows)
+        if: ${{ runner.os == 'Windows' && steps.vcpkg-cache.outputs.cache-hit != 'true' }}
+        run: |
+          cd ${{ github.workspace }}
+          mkdir build -force
+          git clone https://github.com/Microsoft/vcpkg.git
+          cd vcpkg
+          .\bootstrap-vcpkg.bat
+          .\vcpkg install gtk --triplet x64-windows
 
       - name: Build GTK App
         shell: powershell
         run: |
-          # aria2 https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zip
-          #wget https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zip
           wget -Uri "https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zip" -OutFile "pkg-config.zip" 
-          # powershell (new-object Net.WebClient).DownloadFile('https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zip','${{ github.workspace }}')
-          #7z e  -opkg-config pkg-config-lite-0.28-1_bin-win32.zip
           Expand-Archive -Path .\pkg-config.zip -DestinationPath .
           pkg-config --version
-          # cargo build --release
+          cargo build --release
