--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,6 @@ jobs:
             os: windows-latest
             rust: nightly-x86_64-msvc
             target: x86_64-pc-windows-msvc
-            archive-name: sgf-render-windows.7z
     env:
       VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
       VCPKGDIR: "${{ github.workspace }}/vcpkg"
@@ -29,8 +28,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          submodules: recursive
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -40,7 +37,7 @@ jobs:
           override: true
           target: ${{ matrix.target }}
 
-      - name: Restore vcpkg and its artifacts.
+      - name: Restore vcpkg and GTK environment
         uses: actions/cache@v2
         id: vcpkg-cache
         with:
@@ -53,7 +50,8 @@ jobs:
             !${{ env.VCPKG_ROOT }}/downloads
           key: |
             ${{ hashFiles( 'Cargo.lock' ) }}-${{ runner.os }}-cache-key-v1
-      - name: Get vcpkg(windows)
+
+      - name: Install vcpkg for windows
         if: ${{ runner.os == 'Windows' && steps.vcpkg-cache.outputs.cache-hit != 'true' }}
         run: |
           cd ${{ github.workspace }}
@@ -63,7 +61,7 @@ jobs:
           .\bootstrap-vcpkg.bat
           .\vcpkg install gtk --triplet x64-windows
 
-      - name: Build GTK App
+      - name: Build GTK App for Windows
         shell: powershell
         run: |
           wget -Uri "https://udomain.dl.sourceforge.net/project/pkgconfiglite/0.28-1/pkg-config-lite-0.28-1_bin-win32.zip" -OutFile "pkg-config.zip" 
