--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
           set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg\\installed\\x64-windows\\lib\\pkgconfig"
           set GTK_LIB_DIR="${{ github.workspace }}/vcpkg\\installed\\x64-windows\\lib"
-          set PATH=${{ github.workspace }}\pkg-config-lite-0.28-1\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
+          set PATH=${{ github.workspace }}\pkg-config-lite-0.28-1\bin;${{ github.workspace }}/vcpkg\installed\x64-windows\bin;%VCPKG_ROOT%;%PATH%
           
           pkg-config --version
           
