--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,7 @@ jobs:
           git clone https://github.com/Microsoft/vcpkg.git
           cd vcpkg
           .\bootstrap-vcpkg.bat
-#         .\vcpkg install gtk --triplet x64-windows
-
+      #         .\vcpkg install gtk --triplet x64-windows
       - name: Build GTK App for Windows
         shell: powershell
         run: |
@@ -54,21 +53,21 @@ jobs:
           VCPKGDIR: "${{ github.workspace }}/vcpkg"
           PKG_CONFIG_PATH: "%VCPKGDIR%\\installed\\x64-windows\\lib\\pkgconfig"
           GTK_LIB_DIR: "%VCPKGDIR%\\installed\\x64-windows\\lib"
-#           PATH: ${{ github.workspace }}\pkg-config-lite-0.28-1\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
-      
-      -  name: Build Exe
-         shell: cmd
-         run: |
+      #           PATH: ${{ github.workspace }}\pkg-config-lite-0.28-1\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
+
+      - name: Build Exe
+        shell: cmd
+        run: |
           set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
-          set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg\\installed\\x64-windows\\lib\\pkgconfig"
-          set GTK_LIB_DIR="${{ github.workspace }}/vcpkg\\installed\\x64-windows\\lib"
-          set PATH=${{ github.workspace }}\pkg-config-lite-0.28-1\bin;${{ github.workspace }}/vcpkg\installed\x64-windows\bin;%VCPKG_ROOT%;%PATH%
-          
+          set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
+          set GTK_LIB_DIR="${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
+          set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%PKG_CONFIG_PATH%;%VCPKG_ROOT%;%PATH%
+
           pkg-config --version
-          
+
           set VCPKG_ROOT
           set PKG_CONFIG_PATH
           set GTK_LIB_DIR
           set PATH
-          
+
           cargo build --release
