--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,12 @@ jobs:
         with:
           path: |
             ${{ env.VCPKG_ROOT }}
-            ${{ github.workspace }}/build/vcpkg_installed
-            !${{ env.VCPKG_ROOT }}/.git
-            !${{ env.VCPKG_ROOT }}/buildtrees
-            !${{ env.VCPKG_ROOT }}/packages
-            !${{ env.VCPKG_ROOT }}/downloads
-            !${{ github.workspace }}/target
+            ${{ github.workspace }}\build\vcpkg_installed
+            ${{ env.VCPKG_ROOT }}\.git
+            ${{ env.VCPKG_ROOT }}\buildtrees
+            ${{ env.VCPKG_ROOT }}\packages
+            ${{ env.VCPKG_ROOT }}\downloads
+            ${{ github.workspace }}\target
           key: |
             ${{ hashFiles( 'Cargo.lock' ) }}-${{ runner.os }}-cache-key-v1
 
@@ -36,7 +36,8 @@ jobs:
           git clone https://github.com/Microsoft/vcpkg.git
           cd vcpkg
           .\bootstrap-vcpkg.bat
-      #         .\vcpkg install gtk --triplet x64-windows
+          .\vcpkg install gtk --triplet x64-windows
+
       - name: Build GTK App for Windows
         shell: powershell
         run: |
@@ -53,7 +54,7 @@ jobs:
           VCPKGDIR: "${{ github.workspace }}/vcpkg"
           PKG_CONFIG_PATH: "%VCPKGDIR%\\installed\\x64-windows\\lib\\pkgconfig"
           GTK_LIB_DIR: "%VCPKGDIR%\\installed\\x64-windows\\lib"
-      #           PATH: ${{ github.workspace }}\pkg-config-lite-0.28-1\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
+      #   PATH: ${{ github.workspace }}\pkg-config-lite-0.28-1\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
 
       - name: Build Exe
         shell: cmd
