--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           git clone https://github.com/Microsoft/vcpkg.git
           cd vcpkg
           .\bootstrap-vcpkg.bat
-          # .\vcpkg install gtk --triplet x64-windows
+          .\vcpkg install gtk --triplet x64-windows
 
       - name: Build GTK App for Windows
         shell: powershell
@@ -69,16 +69,16 @@ jobs:
           cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib && ls
           echo "*************************************************************************"
           cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig && ls
-          # set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
-          # set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
-          # set GTK_LIB_DIR="${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
-          # set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%VCPKG_ROOT%;%GTK_LIB_DIR%;%PKG_CONFIG_PATH%;%PATH%
+          set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
+          set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
+          set GTK_LIB_DIR="${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
+          set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%VCPKG_ROOT%;%GTK_LIB_DIR%;%PKG_CONFIG_PATH%;%PATH%
+          pkg-config --version
+
+          set VCPKG_ROOT
+          set PKG_CONFIG_PATH
+          set GTK_LIB_DIR
+          set PATH
+
+          cargo build --release
           7z
-          # pkg-config --version
-
-          # set VCPKG_ROOT
-          # set PKG_CONFIG_PATH
-          # set GTK_LIB_DIR
-          # set PATH
-
-          # cargo build --release
