--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
           mkdir build -force
           git clone https://github.com/Microsoft/vcpkg.git
           cd vcpkg
-          .\bootstrap-vcpkg.bat
-          .\vcpkg install gtk --triplet x64-windows
+          #.\bootstrap-vcpkg.bat
+          #.\vcpkg install gtk --triplet x64-windows
 
       - name: Build GTK App for Windows
         shell: powershell
@@ -57,28 +57,32 @@ jobs:
       #   PATH: ${{ github.workspace }}\pkg-config-lite-0.28-1\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
 
       - name: Build Exe
-        env:
-          VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
-          PKG_CONFIG_PATH: "${{ github.workspace }}/vcpkg\\installed\\x64-windows\\lib\\pkgconfig"
-          GTK_LIB_DIR: "${{ github.workspace }}/vcpkg\\installed\\x64-windows\\lib"
-        # shell: cmd
+#        env:
+#          VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
+#          PKG_CONFIG_PATH: "${{ github.workspace }}/vcpkg\\installed\\x64-windows\\lib\\pkgconfig"
+#          GTK_LIB_DIR: "${{ github.workspace }}/vcpkg\\installed\\x64-windows\\lib"
+        shell: bash
         run: |
-          pwd
-          cd ${{ github.workspace }}/vcpkg && ls
-          echo "*************************************************************************"
-          cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib && ls
-          echo "*************************************************************************"
-          cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig && ls
-          set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
-          set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
-          set GTK_LIB_DIR="${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
-          set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%VCPKG_ROOT%;%GTK_LIB_DIR%;%PKG_CONFIG_PATH%;%PATH%
-          pkg-config --version
+           cd ${{ github.workspace }}
+           ls 
+           cd ./vcpkg/installed/x64-windows/lib
+           ls
+          
+#          cd ${{ github.workspace }}/vcpkg && ls
+#          echo "*************************************************************************"
+#         cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib && ls
+#          echo "*************************************************************************"
+#          cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig && ls
+#          set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
+#          set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
+#          set GTK_LIB_DIR="${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
+#          set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%VCPKG_ROOT%;%GTK_LIB_DIR%;%PKG_CONFIG_PATH%;%PATH%
+#          pkg-config --version
 
-          set VCPKG_ROOT
-          set PKG_CONFIG_PATH
-          set GTK_LIB_DIR
-          set PATH
+#          set VCPKG_ROOT
+#          set PKG_CONFIG_PATH
+#          set GTK_LIB_DIR
+#          set PATH
 
-          cargo build --release
-          7z
+#          cargo build --release
+#          7z
