--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,29 +68,32 @@ jobs:
            pwd
            ls -al
            #/d/a/app-gtk-rs/app-gtk-rs 
-           cd ./vcpkg
+           pwd && cd ./vcpkg
            ls -al
-           cd ./vcpkg/installed/x64-windows/lib
-           ls
+           pwd && cd ./installed/
+           ls -al
            echo "**************************************************"
-           cd ./vcpkg/installed/x64-windows/lib/pkgconfig
-           ls
+           cd ./x64-windows/lib/pkgconfig
+           ls -al
           
+      - name: Build
+        shell: cmd
+        run: |
 #          cd ${{ github.workspace }}/vcpkg && ls
 #          echo "*************************************************************************"
-#         cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib && ls
+#          cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib && ls
 #          echo "*************************************************************************"
 #          cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig && ls
-#          set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
-#          set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
-#          set GTK_LIB_DIR="${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
-#          set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%VCPKG_ROOT%;%GTK_LIB_DIR%;%PKG_CONFIG_PATH%;%PATH%
-#          pkg-config --version
+           set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
+           set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
+           set GTK_LIB_DIR="${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
+           set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%VCPKG_ROOT%;%GTK_LIB_DIR%;%PKG_CONFIG_PATH%;%PATH%
+           pkg-config --version
 
-#          set VCPKG_ROOT
-#          set PKG_CONFIG_PATH
-#          set GTK_LIB_DIR
-#          set PATH
+           set VCPKG_ROOT
+           set PKG_CONFIG_PATH
+           set GTK_LIB_DIR
+           set PATH
 
-#          cargo build --release
+           cargo build --release
 #          7z
