--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,24 +84,10 @@ jobs:
           GTK_LIB_DIR: "${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
           PATH: ${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg;${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig;${{ github.workspace }}/vcpkg/installed/x64-windows/lib;%PATH%
         run: |
-
-          #  set VCPKG_ROOT="${{ github.workspace }}/vcpkg"
-          #  set PKG_CONFIG_PATH="${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
-          #  set GTK_LIB_DIR="${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
-          #  set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%VCPKG_ROOT%;%GTK_LIB_DIR%;%PKG_CONFIG_PATH%;%PATH%
+           set VCPKG_ROOT
+           set PKG_CONFIG_PATH
+           set GTK_LIB_DIR
+           set PATH
            pkg-config --version
-
-          #  set VCPKG_ROOT
-          #  set PKG_CONFIG_PATH
-          #  set GTK_LIB_DIR
-          #  set PATH
-
            cargo build --release
 
-#          cd ${{ github.workspace }}/vcpkg && ls
-#          echo "*************************************************************************"
-#          cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib && ls
-#          echo "*************************************************************************"
-#          cd ${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig && ls
-
-#          7z
