--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,17 +77,17 @@ jobs:
           ls -al
 
       - name: Build
-        shell: cmd
-        env:
-          VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
-          PKG_CONFIG_PATH: "${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
-          GTK_LIB_DIR: "${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
-          PATH: ${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg;${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig;${{ github.workspace }}/vcpkg/installed/x64-windows/lib;%PATH%
+#         shell: cmd
+#         env:
+#           VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
+#           PKG_CONFIG_PATH: "${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
+#           GTK_LIB_DIR: "${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
+#           PATH: ${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg;${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig;${{ github.workspace }}/vcpkg/installed/x64-windows/lib;%PATH%
         run: |
-           set VCPKG_ROOT
-           set PKG_CONFIG_PATH
-           set GTK_LIB_DIR
-           set PATH
+           set VCPKG_ROOT=${{ github.workspace }}/vcpkg
+           set PKG_CONFIG_PATH=${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig
+           set GTK_LIB_DIR=${{ github.workspace }}/vcpkg/installed/x64-windows/lib
+           set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg;${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig;${{ github.workspace }}/vcpkg/installed/x64-windows/lib;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%PATH%
            pkg-config --version
            cargo build --release
 
