--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,10 @@ jobs:
         run: |
           cd ${{ github.workspace }}
           mkdir build -force
-          git clone https://github.com/Microsoft/vcpkg.git
-          cd vcpkg
-          .\bootstrap-vcpkg.bat
-          .\vcpkg install gtk --triplet x64-windows
+#          git clone https://github.com/Microsoft/vcpkg.git
+#          cd vcpkg
+#          .\bootstrap-vcpkg.bat
+#          .\vcpkg install gtk --triplet x64-windows
 
       - name: Build GTK App for Windows
         shell: powershell
@@ -84,10 +84,10 @@ jobs:
 #           GTK_LIB_DIR: "${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
 #           PATH: ${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg;${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig;${{ github.workspace }}/vcpkg/installed/x64-windows/lib;%PATH%
         run: |
-           set VCPKG_ROOT=${{ github.workspace }}/vcpkg
-           set PKG_CONFIG_PATH=${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig
-           set GTK_LIB_DIR=${{ github.workspace }}/vcpkg/installed/x64-windows/lib
-           set PATH=${{ github.workspace }}/pkg-config-lite-0.28-1/bin;${{ github.workspace }}/vcpkg;${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig;${{ github.workspace }}/vcpkg/installed/x64-windows/lib;${{ github.workspace }}/vcpkg/installed/x64-windows/bin;%PATH%
+           set VCPKG_ROOT=${{ github.workspace }}\\vcpkg
+           set PKG_CONFIG_PATH=%VCPKG_ROOT%\\installed\\x64-windows\\lib\\pkgconfig
+           set GTK_LIB_DIR=%VCPKG_ROOT%\\installed\\x64-windows\\lib
+           set PATH=${{ github.workspace }}\\pkg-config-lite-0.28-1\\bin;%VCPKG_ROOT%\\installed\\x64-windows\\lib\\pkgconfig;%VCPKG_ROOT%\\installed\\x64-windows\\lib;%VCPKG_ROOT%\\installed\\x64-windows\\bin;%PATH%;
            pkg-config --version
            cargo build --release
 
