--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
             ${{ env.VCPKG_ROOT }}\downloads
             ${{ github.workspace }}\target
           key: |
-            ${{ hashFiles( 'Cargo.lock' ) }}-${{ runner.os }}-cache-key-v1
+            ${{ hashFiles( 'Cargo.toml' ) }}-${{ runner.os }}-cache-key-v1
 
       - name: Install vcpkg for windows
         if: ${{ runner.os == 'Windows' && steps.vcpkg-cache.outputs.cache-hit != 'true' }}
@@ -57,24 +57,6 @@ jobs:
         #   PKG_CONFIG_PATH: "%VCPKGDIR%/installed/x64-windows/lib/pkgconfig"
         #   GTK_LIB_DIR: "%VCPKGDIR%/installed/x64-windows/lib"
       #   PATH: ${{ github.workspace }}\pkg-config-lite-0.28-1\bin;%VCPKGDIR%\installed\x64-windows\bin;%PATH%
-
-      - name: Build Exe
-        #        env:
-        #          VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
-        #          PKG_CONFIG_PATH: "${{ github.workspace }}/vcpkg/installed/x64-windows/lib/pkgconfig"
-        #          GTK_LIB_DIR: "${{ github.workspace }}/vcpkg/installed/x64-windows/lib"
-        shell: bash
-        run: |
-          pwd
-          ls -al
-          #/d/a/app-gtk-rs/app-gtk-rs 
-          pwd && cd ./vcpkg
-          ls -al
-          pwd && cd ./installed/
-          ls -al
-          echo "**************************************************"
-          cd ./x64-windows/lib/pkgconfig
-          ls -al
 
       - name: Build
 #         shell: cmd
