--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,10 @@ jobs:
         run: |
           cd ${{ github.workspace }}
           mkdir build -force
-#          git clone https://github.com/Microsoft/vcpkg.git
-#          cd vcpkg
-#          .\bootstrap-vcpkg.bat
-#          .\vcpkg install gtk --triplet x64-windows
+          git clone https://github.com/Microsoft/vcpkg.git
+          cd vcpkg
+          .\bootstrap-vcpkg.bat
+          .\vcpkg install gtk --triplet x64-windows
 
       - name: Build GTK App for Windows
         shell: powershell
