--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,7 @@ jobs:
            cargo build --release
 
   MacOS:
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -75,10 +76,10 @@ jobs:
       - name: Install GTK4 for MacOS
         run: brew install gtk4
 
-      -name: build gtk app for macos
+      - name: build gtk app for macos
         run: cargo build --release
 
-	    # - name: Create Release
+      # - name: Create Release
       #   id: create_release
       #   uses: actions/create-release@v1
       #   env:
